# WordFormatter

./: .gitignore  Readme.md  pyproject.toml  run.py
scripts/: build_exe.bat
src/wordtool/: config.py
src/wordtool/app/: event_handlers.py  main.py  ui_components.py
src/wordtool/core/: formatter.py
src/wordtool/resources/: ui_config.json
tests/: 2.py  expanded.docx  test1.docx  test2.docx  test2_fixed.docx  序列号.py
